* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 1.4.0
- Add RockyLinux 8 support

* Sat Jan 22 2022 Trevor Vaughan <trevor@sicura.us> - 1.3.1
- Add support for Amazon Linux 2

* Mon Jun 14 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 1.3.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Wed Dec 02 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.2.1-0
- Remove EL6 support
- Fix the main class to work with EL7+
- Fix the acceptance tests

* Fri Dec 06 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.2.0-0
- Add EL8 support

* Tue Aug 20 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 1.1.0-0
- Drop Puppet 4 support
- Add Puppet 6 support
- Add support for puppetlabs-stdlib 6

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 1.0.4-0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Mon Oct 29 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 1.0.3-0
- asset updates for Puppet 5

* Sun Mar 04 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.3-0
- Validate functionality under Puppet 5
- Test against Oracle Enterprise Linux
- Change default state of the acpid package to reference
  `simp_options::package_ensure`, defaulting to `installed`

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 1.0.2-0
- Confine puppet version in metadata.json

* Tue Dec 13 2016 Nick Markowski <nmarkowski@keywcorp.com> - 1.0.1-0
- Strong typed the module

* Wed Dec 07 2016 Nick Markowski <nmarkowski@keywcorp.com> - 1.0.1-0
- Removed hiera fixture simp.yaml
- Updated README per SIMP-2213

* Wed Nov 23 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 1.0.0-0
- Bump major  version number for SIMP 6

* Wed Jul 06 2016 Nick Miller <nick.miller@onyxpoint.com> - 0.0.2-0
- Updated README and moved to the new packaging format

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.1-1
- Updated to require puppet
